<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Resolution">Resolution</string>
    <string name="Abb_Title_badge_labs">LABS</string>
    <string name="COLOR_TUNE_CUSTOM">Manual</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="ISO_100">100</string>
    <string name="ISO_125">125</string>
    <string name="ISO_160">160</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_200">200</string>
    <string name="ISO_250">250</string>
    <string name="ISO_320">320</string>
    <string name="ISO_3200">3200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_50">50</string>
    <string name="ISO_500">500</string>
    <string name="ISO_64">64</string>
    <string name="ISO_640">640</string>
    <string name="ISO_80">80</string>
    <string name="ISO_800">800</string>
    <string name="KELVIN_VALUE_10000K">10000K</string>
    <string name="KELVIN_VALUE_2300K">2300K</string>
    <string name="KELVIN_VALUE_2400K">2400K</string>
    <string name="KELVIN_VALUE_2500K">2500K</string>
    <string name="KELVIN_VALUE_2600K">2600K</string>
    <string name="KELVIN_VALUE_2700K">2700K</string>
    <string name="KELVIN_VALUE_2800K">2800K</string>
    <string name="KELVIN_VALUE_2900K">2900K</string>
    <string name="KELVIN_VALUE_3000K">3000K</string>
    <string name="KELVIN_VALUE_3100K">3100K</string>
    <string name="KELVIN_VALUE_3200K">3200K</string>
    <string name="KELVIN_VALUE_3300K">3300K</string>
    <string name="KELVIN_VALUE_3400K">3400K</string>
    <string name="KELVIN_VALUE_3500K">3500K</string>
    <string name="KELVIN_VALUE_3600K">3600K</string>
    <string name="KELVIN_VALUE_3700K">3700K</string>
    <string name="KELVIN_VALUE_3800K">3800K</string>
    <string name="KELVIN_VALUE_3900K">3900K</string>
    <string name="KELVIN_VALUE_4000K">4000K</string>
    <string name="KELVIN_VALUE_4100K">4100K</string>
    <string name="KELVIN_VALUE_4200K">4200K</string>
    <string name="KELVIN_VALUE_4300K">4300K</string>
    <string name="KELVIN_VALUE_4400K">4400K</string>
    <string name="KELVIN_VALUE_4500K">4500K</string>
    <string name="KELVIN_VALUE_4600K">4600K</string>
    <string name="KELVIN_VALUE_4700K">4700K</string>
    <string name="KELVIN_VALUE_4800K">4800K</string>
    <string name="KELVIN_VALUE_4900K">4900K</string>
    <string name="KELVIN_VALUE_5000K">5000K</string>
    <string name="KELVIN_VALUE_5100K">5100K</string>
    <string name="KELVIN_VALUE_5200K">5200K</string>
    <string name="KELVIN_VALUE_5300K">5300K</string>
    <string name="KELVIN_VALUE_5400K">5400K</string>
    <string name="KELVIN_VALUE_5500K">5500K</string>
    <string name="KELVIN_VALUE_5600K">5600K</string>
    <string name="KELVIN_VALUE_5700K">5700K</string>
    <string name="KELVIN_VALUE_5800K">5800K</string>
    <string name="KELVIN_VALUE_5900K">5900K</string>
    <string name="KELVIN_VALUE_6000K">6000K</string>
    <string name="KELVIN_VALUE_6100K">6100K</string>
    <string name="KELVIN_VALUE_6200K">6200K</string>
    <string name="KELVIN_VALUE_6300K">6300K</string>
    <string name="KELVIN_VALUE_6400K">6400K</string>
    <string name="KELVIN_VALUE_6500K">6500K</string>
    <string name="KELVIN_VALUE_6600K">6600K</string>
    <string name="KELVIN_VALUE_6700K">6700K</string>
    <string name="KELVIN_VALUE_6800K">6800K</string>
    <string name="KELVIN_VALUE_6900K">6900K</string>
    <string name="KELVIN_VALUE_7000K">7000K</string>
    <string name="KELVIN_VALUE_7100K">7100K</string>
    <string name="Title_Advanced_Recording_Options">Advanced video options</string>
    <string name="Title_BurstShot">Burst shots</string>
    <string name="Title_Camcorder_HDR10">HDR10+ videos</string>
    <string name="Title_Camcorder_Zoom_In_Mic">Zoom-in mic</string>
    <string name="Title_FloatingShutterButton">Floating Shutter button</string>
    <string name="Title_Heif">High efficiency pictures</string>
    <string name="Title_KeepCameraMode">Camera mode</string>
    <string name="Title_KeepFilters">Filters</string>
    <string name="Title_KeepPortraitZoom">Portrait zoom</string>
    <string name="Title_KeepSelfieAngle">Selfie angle</string>
    <string name="Title_Raw_File">RAW copies</string>
    <string name="Title_Recording_360_BT_Mic">360 recording BT mic</string>
    <string name="Title_SaveOptions">Advanced picture options</string>
    <string name="Title_SettingsToKeep">Settings to keep</string>
    <string name="Title_ShootingMethod">Shooting Methods</string>
    <string name="Title_ShowPalm">Show palm</string>
    <string name="Title_Space_saving_high_resolution">Space saving high resolution</string>
    <string name="Title_Voice_Capture">Voice control</string>
    <string name="Title_Volume_Key_As">Press Volume keys to</string>
    <string name="Title_Watermark">Watermark</string>
    <string name="Title_high_bitrate_video">High bitrate videos</string>
    <string name="Title_high_efficiency_video">High efficiency videos</string>
    <string name="Title_picture_format">Pro mode picture format</string>
    <string name="Titme_KeepSuperSteady">Super Steady</string>
    <string name="ble_spen_narrower_angle_of_view">Zoom in/Decrease angle view</string>
    <string name="ble_spen_next_mode">Next mode</string>
    <string name="ble_spen_previous_mode">Previous mode</string>
    <string name="ble_spen_shutter">Take picture/record video</string>
    <string name="ble_spen_switch_camera">Switch cameras</string>
    <string name="ble_spen_wider_angle_of_view">Zoom out/Increase angle view</string>
    <string name="camcorder_HDR10_summary">"Optimize the contrast and color of rear camera videos recorded in Video and Pro video modes. Some apps and websites don't support HDR10+."</string>
    <string name="camcorder_front_HEVC_summary">"Save space without sacrificing video quality. The results will be saved in HEVC format, which some apps and websites don't support."</string>
    <string name="camcorder_zoom_in_mic_summary">Match the mic zoom to the camera zoom while recording in Video mode.</string>
    <string name="floating_shutter_button">Take pictures with an extra Shutter button you can move anywhere on the screen.</string>
    <string name="heif_format_summary">"Save space by capturing Photo mode pictures in high efficiency image format (HEIF). Some apps and websites don't support HEIF pictures."</string>
    <string name="high_bitrate_video_summary">Increase bit rate of videos taken in Pro video mode. High bitrate videos are saved in HEVC format and may be larger than normal videos.</string>
    <string name="keep_camera_mode_summary">Start Camera in the last used mode, such as Video, instead of always starting in Photo mode.</string>
    <string name="keep_filters_summary">"Keep the filters you've applied to each mode instead of removing them when you close Camera."</string>
    <string name="keep_portrait_zoom_summary">Keep the zoom you last used for rear camera Portrait mode instead of always starting in the default zoom.</string>
    <string name="keep_selfie_angle_summary">Keep the angle you last used for the front camera. The camera will no longer switch between normal and wide angle based on the number of people in the selfie.</string>
    <string name="keep_super_high_picture_resolution_summary">Keep %d MP resolution applied instead of switching to the default resolution when you close Camera.</string>
    <string name="keep_super_steady_summary">If Super steady is on in Video mode, keep it on instead of turning it off when you close Camera.</string>
    <string name="key_floating_camera_button">floating_camera_button</string>
    <string name="key_hdr10_recording">hdr10_recording</string>
    <string name="key_heif">heif</string>
    <string name="key_hevc">hevc</string>
    <string name="key_high_bitrate_video">high_bitrate_video</string>
    <string name="key_keep_camera_mode">keep_camera_mode</string>
    <string name="key_keep_filters">keep_filters</string>
    <string name="key_keep_high_picture_resolution">keep_high_picture_resolution</string>
    <string name="key_keep_portrait_zoom">keep_portrait_zoom</string>
    <string name="key_keep_selfie_angle">keep_selfie_angle</string>
    <string name="key_keep_super_steady">keep_super_steady</string>
    <string name="key_palm_detection">palm_detection</string>
    <string name="key_picture_format">picture_format</string>
    <string name="key_recording_360_bt_mic">recording_360_bt_mic</string>
    <string name="key_space_saving_high_resolution">space_saving_high_resolution</string>
    <string name="key_voice_control">voice_control</string>
    <string name="key_volume_key_to">volume_key_to</string>
    <string name="key_watermark_alignment">watermark_alignment</string>
    <string name="key_watermark_date">watermark_date</string>
    <string name="key_watermark_date_and_time">watermark_date_and_time</string>
    <string name="key_watermark_font">watermark_font</string>
    <string name="key_watermark_model_name">watermark_model_name</string>
    <string name="key_watermark_time">watermark_time</string>
    <string name="key_zoom_in_mic">zoom_in_mic</string>
    <string name="optional_permissions_china">Optional permissions</string>
    <string name="permission_camera_description">Used to capture pictures and videos</string>
    <string name="permission_camera_title">Camera</string>
    <string name="permission_location_description">Used to add location information to pictures and videos</string>
    <string name="permission_location_title">Location</string>
    <string name="permission_microphone_description">Used to record sound in videos</string>
    <string name="permission_microphone_title">Microphone</string>
    <string name="permission_nearby_device_description">Used to record sound through Bluetooth mics.</string>
    <string name="permission_nearby_device_title">Nearby devices</string>
    <string name="permission_notification_description">Used to indicate when pictures and videos are being processed</string>
    <string name="permission_optional_permissions_description">"You can still use the app's basic functions without allowing the optional permissions."</string>
    <string name="permission_photo_and_video_description">Used to access pictures and videos</string>
    <string name="permission_storage_title">Storage</string>
    <string name="permission_system_alert_window_description">Used to show this app in a window while using other apps</string>
    <string name="permission_system_alert_window_title">Appear on top</string>
    <string name="picture_format_summary">"Save both JPEG and RAW copies of pictures taken in Pro mode. Color tone adjustments won't be shown in RAW copies."</string>
    <string name="record_video">Record video</string>
    <string name="recording_360_BT_mic_summary">When BT is connected that can record 360, it is automatically recorded as BT MIC.</string>
    <string name="required_permissions_china">Required permissions</string>
    <string name="show_palm_summary">Show your palm to the camera to take selfies or start recording selfie videos.</string>
    <string name="space_saving_high_resolution_summary">Shoot high resolution pictures in %1$sMP instead of %2$sMP.</string>
    <string name="take_portrait">Take portrait</string>
    <string name="take_selfie">Take selfie</string>
    <string name="title_keep_high_picture_resolution">High picture resolutions</string>
    <string name="watermark_alignment">Alignment</string>
    <string name="watermark_date">Date</string>
    <string name="watermark_date_and_time">Date and time</string>
    <string name="watermark_font">Font</string>
    <string name="watermark_model_name">Model name</string>
    <string name="watermark_style">Style</string>
    <string name="watermark_time">Time</string>
</resources>