<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/Title_Advanced_Recording_Options"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_high_efficiency_video" android:key="@string/key_hevc" android:summary="@string/camcorder_front_HEVC_summary" />
    <com.sec.android.app.camera.setting.SwitchListPreference android:persistent="false" android:title="@string/Title_high_efficiency_video" android:key="@string/key_hevc" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_high_bitrate_video" android:key="@string/key_high_bitrate_video" android:summary="@string/high_bitrate_video_summary" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Camcorder_HDR10" android:key="@string/key_hdr10_recording" android:summary="@string/camcorder_HDR10_summary" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Camcorder_Zoom_In_Mic" android:key="@string/key_zoom_in_mic" android:summary="@string/camcorder_zoom_in_mic_summary" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Recording_360_BT_Mic" android:key="@string/key_recording_360_bt_mic" android:summary="@string/recording_360_BT_mic_summary" />
</PreferenceScreen>