<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/Title_SaveOptions"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Heif" android:key="@string/key_heif" android:summary="@string/heif_format_summary" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Space_saving_high_resolution" android:key="@string/key_space_saving_high_resolution" android:summary="@string/space_saving_high_resolution_summary" />
    <com.sec.android.app.camera.setting.CameraSwitchPreference android:persistent="false" android:title="@string/Title_Raw_File" android:key="@string/key_picture_format" android:summary="@string/picture_format_summary" />
    <com.sec.android.app.camera.setting.SettingPreference android:title="@string/Title_picture_format" android:key="@string/key_picture_format" />
</PreferenceScreen>